deploy/000-standard/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-git-sync
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: git-content
          mountPath: /usr/share/nginx/html # Nginx sert les fichiers clonés

      - name: git-sync
        image: k8s.gcr.io/git-sync/git-sync:v3.3.1
        volumeMounts:
        - name: git-content
          mountPath: /git/repo # Le sidecar synchronise dans ce répertoire partagé

      volumes:
      - name: git-content
        emptyDir: {}
